fixed react Tooltip re-render and changed treeUI z-Index

--- a/src/components/Loading/loader.scss
+++ b/src/components/Loading/loader.scss
@@ -21,6 +21,8 @@
     user-select: none;
   }
   .loader-animation {
+    position:relative; 
+    left: 100px;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
