--- a/src/styles/TreeUI/TreeUI.scss
+++ b/src/styles/TreeUI/TreeUI.scss
@@ -2,7 +2,7 @@
     position: absolute;
     left: -90px;
     top: 80px;
-    z-index: 99999999;
+    z-index: 999999;
     width: 125px;
     display: flex;
     flex-flow: row nowrap;
@@ -36,7 +36,7 @@
     position: absolute;
     left: 0;
     top: 50px;
-    z-index: 99999999;
+    z-index: 999999;
     background-color: white;
     height: calc(100vh - 50px);
     overflow: auto;
